Fix the vertical alignment of inline code

--- a/wcfsetup/install/files/style/bbcode/inlineCode.scss
+++ b/wcfsetup/install/files/style/bbcode/inlineCode.scss
@@ -15,7 +15,7 @@ kbd {
 	overflow: auto;
 	padding: 0.15em;
 	text-decoration: none;
-	vertical-align: middle;
+	vertical-align: text-top;
 	word-break: break-word;
 	word-wrap: break-word;
 }
